--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ Thumbs.db
 # Android Studio
 *.iml
 .idea/
+.idea/codeStyles/Project.xml
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle/
 build/
