--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -161,9 +161,6 @@
             android:name=".activities.CropSoilAnalysisManagerActivity"
             android:label="@string/activity_soil_analysis_manager_label" />
         <activity
-            android:name=".activities.CropSprayingManagerActivity"
-            android:label="@string/activity_spraying_manager_label" />
-        <activity
             android:name=".activities.predictiontools.CropFertilizerApplicationManagerActivity"
             android:label="@string/activity_fertilizer_application_manager_label" />
         <activity
@@ -203,7 +200,6 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.DashboardActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
@@ -388,6 +384,7 @@
         <activity
             android:name=".activities.wallet.WalletHomeActivity"
             android:parentActivityName=".activities.DashboardActivity"
+            android:configChanges="orientation"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.wallet.WalletAuthActivity"
