--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,16 @@
         tools:replace="android:allowBackup,android:usesCleartextTraffic,android:theme"
         tools:targetApi="m">
 
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+
+        <!--    Editted by saud. above meta data tag does not works with place picker api. -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/maps_api_key"/>
+
         <activity
             android:name=".activities.marketplace.MarketPlaceActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -204,7 +214,36 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activities.SplashScreen"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"
+            android:theme="@style/MySplashScreen">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activities.marketplace.BuyInputsActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"
+            android:windowSoftInputMode="adjustPan">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.SEARCH" />
+
             </intent-filter>
         </activity>
 
@@ -368,17 +407,35 @@
             android:name=".activities.wallet.LoanStatusPreviewActivity"
             android:label="@string/title_activity_loan_status_preview" />
 
+        <!-- Scheduled Notifications -->
+
+        <receiver
+            android:name=".receivers.AlarmReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <category android:name="android.intent.category.APP_MARKET" />
+
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
+            </intent-filter>
+        </receiver>
+
+
+        <!-- Firebase Notifications -->
+
+        <service android:name=".services.MyFirebaseInstanceIdService"
+            android:permission="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
         <service
             android:name=".services.CropNotificationsCreatorService"
             android:enabled="true"
             android:exported="true" />
-        <service
-            android:name=".services.MyFirebaseInstanceIdService"
-            android:permission="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
+
     </application>
 
 </manifest>
