added retrofit implementation in wallet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -342,6 +342,7 @@
         <activity android:name=".activities.wallet.WalletPurchaseCardPreviewActivity" />
 
 
+        <activity android:name=".activities.wallet.WalletHomeActivity"/>
         <activity
             android:name=".activities.wallet.WalletAuthActivity"
             android:label="Authentication" />
