--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,8 +97,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
-    //alpha07 alpha08 alpha09 have a bug
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    //all newer versions i.e. alpha03-alpha09 have a bug
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.github.barteksc:android-pdf-viewer:2.0.3'
     implementation 'pub.devrel:easypermissions:0.1.5'
