--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     // (Recommended) Add Analytics
     implementation 'com.google.firebase:firebase-analytics:17.0.1'
     // Add dependency
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+   // implementation 'com.crashlytics.sdk.android:crashlytics:17.2.2'
 
     // Remove
     implementation 'com.loopj.android:android-async-http:1.4.9'
@@ -99,9 +99,6 @@ dependencies {
 
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
-        transitive = true;
-    }
 
     /*Add QR Library Here */
     //    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
