--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,7 +137,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     // Material Design
-    implementation "com.google.android.material:material:$material_version"
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     // Java Navigation Component
