--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
+
     defaultConfig {
         //applicationId "com.myfarmnow.myfarmcrop" //this id is for testing purposes
         applicationId "com.myfarmnow.cropmanager" //play store id
@@ -49,7 +50,19 @@ android {
         }
     }
 
-    buildToolsVersion '29.0.2'
+    splits {
+        density {
+            enable true
+            reset()
+            include "ldpi","mdpi", "xhdpi"
+        }
+        abi {
+            enable true
+            reset()
+            include "x86", "x86_64", "armeabi", "armeabi-v7a", "arm64-v8a", "mips64", "mips"
+        }
+    }
+
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 
     lintOptions {
@@ -90,15 +103,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
     // (Recommended) Add Analytics
     implementation 'com.google.firebase:firebase-analytics:17.0.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     // Add dependency
-   // implementation 'com.crashlytics.sdk.android:crashlytics:17.2.2'
+    // implementation 'com.crashlytics.sdk.android:crashlytics:17.2.2'
 
     // Remove
     implementation 'com.loopj.android:android-async-http:1.4.9'
 
-    implementation 'com.highsoft.highcharts:highcharts:7.0.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'com.highsoft.highcharts:highcharts:8.1.2'
 
     //all newer versions i.e. alpha03-alpha09 have a bug
     implementation 'com.github.barteksc:android-pdf-viewer:2.0.3'
@@ -110,17 +123,6 @@ dependencies {
 
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
-    /*Add QR Library Here */
-    //    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
-    //implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
-    //implementation 'com.google.zxing:core:3.3.2'
-    //implementation 'com.zfdang.multiple-images-selector:multiple-images-selector:1.1.3'
-    //implementation 'com.github.myinnos:AwesomeImagePicker:1.0.2'
-    //implementation 'com.jjoe64:graphview:4.2.2'
-    /* Intercom Messages*/
-    //implementation 'io.intercom.android:intercom-sdk-base:5.1.0'
-    //implementation 'io.intercom.android:intercom-sdk-fcm:5.1.0'
 
     implementation 'com.appyvet:materialrangebar:1.4.4'
     implementation 'com.github.Flutterwave.rave-android:rave_presentation:2.1.8'
