--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
 
     repositories {
+
         maven {
             name 'Google'
             url 'https://maven.fabric.io/public'
@@ -34,13 +35,16 @@ buildscript {
 allprojects {
 
     repositories {
+
+        maven { url 'https://jitpack.io' }
+
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
         google()
         jcenter()
-        maven { url "https://jitpack.io" }
+
         maven {
             url "https://highsoft.bintray.com/Highcharts"
         }
