loan application last page submission

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,4 +173,5 @@ dependencies {
     implementation 'com.braintreepayments.api:braintree:2.+'
 
     implementation 'com.crystal:crystalrangeseekbar:1.1.1'
+    implementation 'com.github.maayyaannkk:ImagePicker:1.0.9'
 }
